[package]
name = "blazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.11"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.23", features = ["macros", "formatting"] }
toml = "0.7.6"
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort" # playing with fire here
